static/benchmarks/css/competition.sass
.navbar-competition
  background-color: rgb(7, 137, 48)
  color: white
  border-radius: 6px

  &:hover
    border: 1px solid $brain-score-color

.competition-hero

  background: $brain-score-color
  background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(7,137,48,1) 54%, rgba(69,252,179,1) 100%)

  .title
    color: white
    font-weight: bold

section#tracks
  div.columns > div.column > div.card
    height: 100%

  span.track
    border-bottom: 1px solid $brain-score-color

  ul.prizes
    list-style-type: none

#prize-pool
  font-weight: bold
  border-bottom: 1px solid $brain-score-color


#stimuli-samples
  max-height: 325px
  overflow-y: hidden

  .stimulus_sample
    height: 50px

.contact-link
  font-weight: 700

span.bold-emphasis
  font-weight: 700

span.italic-emphasis
  font-style: italic

